--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "kxmenu"]
 	path = kxmenu
 	url = https://github.com/timoxa0/kxmenu.git
+[submodule "kexec-tools"]
+	path = kexec-tools
+	url = https://github.com/horms/kexec-tools.git
+[submodule "busybox"]
+	path = busybox
+	url = https://github.com/mirror/busybox.git
