--- a/boot.conf
+++ b/boot.conf
@@ -1,10 +1,7 @@
 # Boot Image Configuration
 
 # Kernel command line parameters
-CMDLINE = rdinit=/sbin/init fbcon=rotate:1 loglevel=0 console=tty2 quiet
-
-# Linux boot partition label
-BOOT_PART_LABEL = boot
+CMDLINE = rdinit=/sbin/init kxmenu.boot=boot fbcon=rotate:1 loglevel=0 console=tty1 quiet
 
 # Android boot image parameters
 HEADER_VERSION = 0
