fix android boot build

--- a/boot.conf
+++ b/boot.conf
@@ -1,13 +1,13 @@
 # Boot Image Configuration
 
 # Kernel command line parameters
-CMDLINE = rdinit=/sbin/init kxmenu.boot=boot fbcon=rotate:1 loglevel=0 console=tty1 quiet
+CMDLINE := rdinit=/sbin/init kxmenu.boot=boot fbcon=rotate:1 loglevel=0 console=tty1 quiet
 
 # Android boot image parameters
-HEADER_VERSION = 0
-KERNEL_OFFSET = 0x00008000
-BASE_ADDRESS = 0x00000000
-RAMDISK_OFFSET = 0x01000000
-SECOND_OFFSET = 0x00f00000
-TAGS_OFFSET = 0x00000100
-PAGE_SIZE = 4096
+HEADER_VERSION := 0
+KERNEL_OFFSET := 0x00008000
+BASE_ADDRESS := 0x00000000
+RAMDISK_OFFSET := 0x01000000
+SECOND_OFFSET := 0x00f00000
+TAGS_OFFSET := 0x00000100
+PAGE_SIZE := 4096
