add kernel and firmware extraction

--- a/boot.conf
+++ b/boot.conf
@@ -11,3 +11,7 @@ RAMDISK_OFFSET := 0x01000000
 SECOND_OFFSET := 0x00f00000
 TAGS_OFFSET := 0x00000100
 PAGE_SIZE := 4096
+
+# External package URLs
+KERNEL_PACKAGE_URL := https://download.copr.fedorainfracloud.org/results/tx0su/pipa-support/fedora-43-aarch64/09603512-kernel/kernel-6.15.8-13.pipa.aarch64.rpm
+FIRMWARE_PACKAGE_URL := https://download.copr.fedorainfracloud.org/results/tx0su/pipa-support/fedora-43-aarch64/09597276-xiaomi-pipa-firmware/xiaomi-pipa-firmware-1.1-2.aarch64.rpm
