--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,6 +2,9 @@ name: Build kxboot-pipa
 
 on:
   workflow_dispatch: {}
+  push:
+    paths:
+      - '.github/workflows/build.yml'
 
 permissions:
   contents: write
@@ -35,6 +38,6 @@ jobs:
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         file: kxboot-pipa.img
         asset_name: kxboot-pipa.img
-        tag: v1.0.0
+        tag: v1.0.1
         overwrite: true
         body: 'kxboot-pipa'
